# micrify

./: README.md  pyproject.toml
examples/variogram-comparison/: README.md  main.py  pyproject.toml
micrify/: __init__.py  variogram.py
