[project]
name = "micrify"
version = "0.1.1"
description = "A small toolbox for spatial statistics"
readme = "README.md"
authors = [
    { name = "Jan Mirco Pfeifer", email = "126580858+janmirco@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "gstools>=1.7.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "utly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["micrify"]

[tool.uv.sources]
utly = { git = "https://github.com/janmirco/utly.git" }
